--- a/DCTTask/MainWindow.xaml
+++ b/DCTTask/MainWindow.xaml
@@ -2,11 +2,16 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DCTTask"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"        
+        xmlns:local="clr-namespace:DCTTask"        
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
+    <Grid Margin="10, 20">
+        <StackPanel>
+            <Button Content="All coins" Width="80" Height="30" HorizontalAlignment="Left" />
+            <Button Content="Trending" Width="80" Height="30" HorizontalAlignment="Left" />
+        </StackPanel>
+        
+        <Frame Source="Pages/Trending.xaml" Margin="90,0,0,0" />
     </Grid>
 </Window>
