--- a/DCTTask/App.xaml
+++ b/DCTTask/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="DCTTask.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:DCTTask"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:DCTTask">
     <Application.Resources>
          
     </Application.Resources>
