--- a/DCTTask/MainWindow.xaml
+++ b/DCTTask/MainWindow.xaml
@@ -9,12 +9,12 @@
         Title="MainWindow" Height="700" Width="1200">
     <Grid Margin="10, 20" >
         <StackPanel>
-            <Button Content="All coins" Width="110" Height="60" HorizontalAlignment="Left" Command="{Binding AllCoinsBtn}" />
-            <Button Content="Top10" Width="110" Height="60" HorizontalAlignment="Left" Command="{Binding TrendingBtn}" />
+            <Button Content="All coins" Width="110" Height="60" HorizontalAlignment="Left" Command="{Binding UpdatePage}" CommandParameter="AllCoins" />
+            <Button Content="Top10" Width="110" Height="60" HorizontalAlignment="Left" Command="{Binding UpdatePage}" CommandParameter="Top10" />
         </StackPanel>
 
 
-        <Frame Content="{Binding CurrentPage}" Margin="120,0,0,0" />
+        <Frame Content="{Binding CurrentPage}" Margin="120,0,0,0" NavigationUIVisibility="Hidden" />
 
 
     </Grid>
