--- a/DCTTask/Pages/AllCoinMarkets.xaml
+++ b/DCTTask/Pages/AllCoinMarkets.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="DCTTask.Pages.Top10"
+﻿<Page x:Class="DCTTask.Pages.AllCoinMarkets"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:DCTTask.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Top10">
+      Title="AllCoinMarkets">
 
     <Grid Background="White" >
         <Grid.RowDefinitions>
@@ -20,23 +20,27 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" FontSize="24" Text="Trending" />
+            <TextBlock Grid.Column="0" FontSize="24" Text="All Markets" />
             <TextBox Grid.Column="1" FontSize="24" Margin="0 0 50 0" />
         </Grid>
-        <ListView x:Name="DataGrid1" Grid.Row="1" Margin="0 20 0 0" MaxHeight="500" MaxWidth="700">
+        <ListView x:Name="DataGrid1" Grid.Row="1" Margin="0 20 0 0" MaxHeight="500" MaxWidth="350">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Rank">
+                    <GridViewColumn Header="Market name">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding rank}" />
+                                <TextBlock Text="{Binding exchangeId}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Header="Name">
+                    <GridViewColumn Header="Pair">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding name}" />
+                                <TextBlock>
+                                    <Run Text="{Binding baseSymbol}" />
+                                    <Run Text="/" />
+                                    <Run Text="{Binding quoteSymbol}" />
+                                </TextBlock>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
@@ -46,28 +50,7 @@
                                 <TextBlock Text="{Binding priceUsd, StringFormat={}{0:C}}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn Header="Volume 24Hr">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding volumeUsd24Hr, StringFormat={}{0:C}}" />
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn Header="Change Percent 24Hr">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text= "{Binding changePercent24Hr, StringFormat={}{0:#0.00'%'}}" />
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn Header="Markets">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <Button Content="Markets" Click="GetMarketsBtn_Click" />
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
+                    </GridViewColumn>                    
                 </GridView>
             </ListView.View>
         </ListView>
