--- a/DCTTask/Pages/AllCoins.xaml
+++ b/DCTTask/Pages/AllCoins.xaml
@@ -17,16 +17,18 @@
 
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0" FontSize="24" Text="All Coins" />
-            <TextBox Grid.Column="1" FontSize="24" Margin="0 0 50 0" />
+            <TextBox x:Name="SearchTxt" FontSize="24" Grid.Column="1" KeyDown="SearchTxt_KeyDown" />
+            <Button x:Name="SearchBtn" Grid.Column="2" Content="Search" HorizontalAlignment="Left" VerticalAlignment="Center"  Width="50" Height="34" Click="SearchBtn_Click"/>
         </Grid>
         <ListView x:Name="DataGrid1" Grid.Row="1" Margin="0 20 0 0" MaxHeight="500" MaxWidth="700">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Rank">
+                    <GridViewColumn Header="Rank" Width="50">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding rank}" />
