--- a/DCTTask/Pages/AllCoins.xaml
+++ b/DCTTask/Pages/AllCoins.xaml
@@ -25,7 +25,7 @@
             <TextBox x:Name="SearchTxt" FontSize="24" Grid.Column="1" KeyDown="SearchTxt_KeyDown" />
             <Button x:Name="SearchBtn" Grid.Column="2" Content="Search" HorizontalAlignment="Left" VerticalAlignment="Center"  Width="50" Height="34" Click="SearchBtn_Click"/>
         </Grid>
-        <ListView x:Name="DataGrid1" Grid.Row="1" Margin="0 20 0 0" MaxHeight="500" MaxWidth="700">
+        <ListView x:Name="DataGrid1" Grid.Row="1" Margin="0 20 0 0" MaxHeight="600" MaxWidth="700">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Rank" Width="50">
@@ -73,6 +73,9 @@
                 </GridView>
             </ListView.View>
         </ListView>
+        <Button x:Name="PrevBtn" Content="&lt;" HorizontalAlignment="Center" Margin="0,10,80,0" Grid.Row="2" Width="30" Click="PrevBtn_Click" />
+        <Button x:Name="NextBtn" Content="&gt;" HorizontalAlignment="Center" Margin="80,10,0,0" Grid.Row="2" Width="30" Click="NextBtn_Click" />
+        <Label x:Name="PageNumberLbl" Content="Label" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Row="2" />
 
     </Grid>
 </Page>
