--- a/DCTTask/Pages/AllCoins.xaml
+++ b/DCTTask/Pages/AllCoins.xaml
@@ -12,7 +12,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
+            <RowDefinition x:Name="Row3" Height="auto" />
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
@@ -25,7 +25,7 @@
             <TextBox x:Name="SearchTxt" FontSize="24" Grid.Column="1" KeyDown="SearchTxt_KeyDown" />
             <Button x:Name="SearchBtn" Grid.Column="2" Content="Search" HorizontalAlignment="Left" VerticalAlignment="Center"  Width="50" Height="34" Click="SearchBtn_Click"/>
         </Grid>
-        <ListView x:Name="DataGrid1" Grid.Row="1" Margin="0 20 0 0" MaxHeight="600" MaxWidth="700">
+        <ListView x:Name="DataGrid1" Grid.Row="1" Margin="0 20 0 0" MaxHeight="530" MaxWidth="700">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Rank" Width="50">
